--- a/index.html
+++ b/index.html
@@ -65,15 +65,19 @@
   <script type="importmap">
 {
   "imports": {
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4",
     "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "canvas-confetti": "https://esm.sh/canvas-confetti@^1.9.3"
+    "canvas-confetti": "https://esm.sh/canvas-confetti@^1.9.4"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <!-- Standard Vite entry point -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
